--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.11.1"
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.11.1",
+    "flowbite": "^3.1.2",
+    "gsap": "^3.13.0",
+    "tailwindcss": "^4.1.11"
   }
 }
